# tpm-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  mise.toml
.github/workflows/: ci.yaml  release.yaml
docs/: MIGRATING_FROM_TPM.md  migration.md
examples/: tpm.yaml
scripts/: install.sh  package-release.sh  prepare-release.sh  render-installer.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  manifest.rs  paths.rs  plugin.rs  tmux.rs  user_path.rs  version.rs
src/commands/: add.rs  cleanup.rs  doctor.rs  install.rs  list.rs  load.rs  migrate.rs  mod.rs  paths.rs  progress.rs  remove.rs  self_update.rs  stub.rs  sync.rs  sync_cmd.rs  update.rs
tests/: add_remove_cli.rs  cleanup_cli.rs  doctor_cli.rs  install_cli.rs  installer_script.rs  list_cli.rs  load_cli.rs  migrate_cli.rs  paths_cli.rs  self_update_cli.rs  sync_cli.rs  update_cli.rs
tests/support/: mod.rs
