[package]
name = "tpm-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Rust CLI replacement for tmux plugin manager"
repository = "https://github.com/pgilad/tpm-rs"
readme = "README.md"
rust-version = "1.94.1"
default-run = "tpm"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
flate2 = "1.1.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tar = "0.4.44"
thiserror = "2.0.18"

[[bin]]
name = "tpm"
path = "src/main.rs"
